@@ -181,6 +181,11 @@ void FileGenerator::GenerateSource(io::Printer* printer) {
   printer->Print(
     "/* Generated by the protocol buffer compiler.  DO NOT EDIT! */\n"
     "\n"
+    "/* Do not generate deprecated warnings for self */\n"
+    "#ifndef PROTOBUF_C_NO_DEPRECATED\n"
+    "#define PROTOBUF_C_NO_DEPRECATED\n"
+    "#endif\n"
+    "\n"
     "#include \"$basename$.pb-c.h\"\n",
     "basename", StripProto(file_->name()));
 
